force-app/main/default/objects/Job_Position__c/Job_Position__c.object-meta.xml
<CustomObject>
    <label>Job Position</label>
    <nameField>
        <displayFormat>JP-{0000}</displayFormat>
        <label>Job Position Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>