force-app/main/default/objects/Job_Position__c/fields/Application_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Application_Deadline__c</fullName>
    <label>Application Deadline</label>
    <type>Date</type>
</CustomField>