force-app/main/default/objects/Job_Position__c/fields/Desired_Hires__c.field-meta.xml
<CustomField>
    <fullName>Desired_Hires__c</fullName>
    <label>Desired Hires</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>