force-app/main/default/objects/Job_Position__c/fields/Detailed_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Tasks__c</fullName>
    <label>Detailed Tasks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>