force-app/main/default/objects/Job_Position__c/fields/Finalize_Selection__c.field-meta.xml
<CustomField>
    <fullName>Finalize_Selection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finalize Selection</label>
    <type>Checkbox</type>
</CustomField>