force-app/main/default/objects/Job_Position__c/fields/Interview_Stages_Count__c.field-meta.xml
<CustomField>
    <fullName>Interview_Stages_Count__c</fullName>
    <label>Interview Stages Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>