force-app/main/default/objects/Job_Position__c/fields/Max_Interview_Candidates__c.field-meta.xml
<CustomField>
    <fullName>Max_Interview_Candidates__c</fullName>
    <label>Max Interview Candidates</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>