force-app/main/default/objects/Job_Position__c/fields/Min_Years_Experience__c.field-meta.xml
<CustomField>
    <fullName>Min_Years_Experience__c</fullName>
    <label>Min Years Experience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>