force-app/main/default/objects/Job_Position__c/fields/Required_Education__c.field-meta.xml
<CustomField>
    <fullName>Required_Education__c</fullName>
    <label>Required Education</label>
    <length>255</length>
    <type>Text</type>
</CustomField>