force-app/main/default/objects/Job_Position__c/fields/Required_Experience__c.field-meta.xml
<CustomField>
    <fullName>Required_Experience__c</fullName>
    <label>Required Experience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>