force-app/main/default/objects/Job_Position__c/fields/Required_Languages__c.field-meta.xml
<CustomField>
    <fullName>Required_Languages__c</fullName>
    <label>Required Languages</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>