force-app/main/default/objects/Job_Position__c/fields/Required_Location__c.field-meta.xml
<CustomField>
    <fullName>Required_Location__c</fullName>
    <label>Required Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>