force-app/main/default/objects/Job_Position__c/fields/Soft_Skills__c.field-meta.xml
<CustomField>
    <fullName>Soft_Skills__c</fullName>
    <label>Soft Skills</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>