force-app/main/default/objects/Job_Position__c/fields/Target_Skills__c.field-meta.xml
<CustomField>
    <fullName>Target_Skills__c</fullName>
    <label>Target Skills</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>