force-app/main/default/objects/Job_Position__c/fields/Technical_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Technical_Requirements__c</fullName>
    <label>Technical Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>