force-app/main/default/objects/Job_Position__c/validationRules/Prevent_Invalid_Open_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Invalid_Open_Status</fullName>
    <active>true</active>
    <description>Prevents a Job Position from being opened manually when required publishing fields are missing or the application deadline is expired.</description>
    <errorConditionFormula>
AND(
    ISPICKVAL(Status__c, "Open"),
    OR(
        ISBLANK(Title__c),
        ISBLANK(Portal_Description__c),
        ISBLANK(Application_Deadline__c),
        Application_Deadline__c &lt; TODAY()
    )
)
    </errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>A Job Position cannot be opened unless Title, Portal Description, and a valid Application Deadline are filled.</errorMessage>
</ValidationRule>