force-app/main/default/objects/Job_Position__c/listViews/Draft_Job_Positions.listView-meta.xml
<ListView>
    <fullName>Draft_Job_Positions</fullName>
    <columns>Title__c</columns>
    <columns>Status__c</columns>
    <columns>Department__c</columns>
    <columns>Hiring_Manager__c</columns>
    <columns>Application_Deadline__c</columns>
    <columns>Open_Positions__c</columns>
    <columns>Filled_Positions__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>Draft Job Positions</label>
</ListView>