force-app/main/default/objects/Job_Position__c/listViews/Open_Job_Positions.listView-meta.xml
<ListView>
    <fullName>Open_Job_Positions</fullName>
    <columns>Title__c</columns>
    <columns>Status__c</columns>
    <columns>Department__c</columns>
    <columns>Hiring_Manager__c</columns>
    <columns>Application_Deadline__c</columns>
    <columns>Open_Positions__c</columns>
    <columns>Filled_Positions__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Open Job Positions</label>
</ListView>